// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionLabel When hideSectionHeader is true should add styling to hide SectionLabel when width of screen is less than 600 px 1`] = `
.c0 {
  position: relative;
  margin-top: 1.5rem;
  margin-bottom: 1rem;
}

.c1 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #222222;
  background-color: #FFFFFF;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  display: inline-block;
  position: relative;
  margin: 0;
  padding-right: 0.5rem;
}

@media (min-width:37.5rem) {
  .c0 {
    margin-top: 2rem;
    margin-bottom: 1.5rem;
  }
}

@media (max-width:37.4375rem) {
  .c0 {
    -webkit-clip-path: inset(100%);
    clip-path: inset(100%);
    -webkit-clip: rect(1px,1px,1px,1px);
    clip: rect(1px,1px,1px,1px);
    height: 1px;
    overflow: hidden;
    position: absolute;
    width: 1px;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding-right: 1rem;
  }
}

<div
  class="c0"
>
  <h2
    class="c1"
    dir="ltr"
    id="test-section-label"
  />
</div>
`;

exports[`SectionLabel With bar With title should render correctly 1`] = `
.c0 {
  position: relative;
  margin-top: 1.5rem;
  margin-bottom: 1rem;
}

.c0::before {
  content: '';
  position: absolute;
  border-top: 0.0625rem solid #AEAEB5;
  left: 0;
  right: 0;
  top: 0.6875rem;
}

.c1 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #222222;
  background-color: #FFFFFF;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  display: inline-block;
  position: relative;
  margin: 0;
  padding-right: 0.5rem;
}

@media (min-width:37.5rem) {
  .c0 {
    margin-top: 2rem;
    margin-bottom: 1.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0::before {
    top: 0.75rem;
  }
}

@media (min-width:37.5rem) {
  .c0::before {
    top: 0.875rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c0::before {
    border-color: windowText;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding-right: 1rem;
  }
}

<div
  class="c0"
>
  <h2
    class="c1"
    dir="ltr"
    id="test-section-label"
  >
    This is text in a SectionLabel.
  </h2>
</div>
`;

exports[`SectionLabel With bar With title should render correctly with arabic script typography values 1`] = `
.c0 {
  position: relative;
  margin-top: 1.5rem;
  margin-bottom: 1rem;
}

.c0::before {
  content: '';
  position: absolute;
  border-top: 0.0625rem solid #AEAEB5;
  left: 0;
  right: 0;
  top: 1rem;
}

.c1 {
  font-size: 1.5rem;
  line-height: 2rem;
  color: #222222;
  background-color: #FFFFFF;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  display: inline-block;
  position: relative;
  margin: 0;
  padding-left: 0.5rem;
}

@media (min-width:37.5rem) {
  .c0 {
    margin-top: 2rem;
    margin-bottom: 1.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0::before {
    top: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c0::before {
    top: 1.125rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c0::before {
    border-color: windowText;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.625rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding-left: 1rem;
  }
}

<div
  class="c0"
>
  <h2
    class="c1"
    dir="rtl"
    id="test-section-label"
  >
    بعض محتوى النص
  </h2>
</div>
`;

exports[`SectionLabel With bar With title should render correctly with explicit text direction 1`] = `
.c0 {
  position: relative;
  margin-top: 1.5rem;
  margin-bottom: 1rem;
}

.c0::before {
  content: '';
  position: absolute;
  border-top: 0.0625rem solid #AEAEB5;
  left: 0;
  right: 0;
  top: 0.6875rem;
}

.c1 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #222222;
  background-color: #FFFFFF;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  display: inline-block;
  position: relative;
  margin: 0;
  padding-right: 0.5rem;
}

@media (min-width:37.5rem) {
  .c0 {
    margin-top: 2rem;
    margin-bottom: 1.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0::before {
    top: 0.75rem;
  }
}

@media (min-width:37.5rem) {
  .c0::before {
    top: 0.875rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c0::before {
    border-color: windowText;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding-right: 1rem;
  }
}

<div
  class="c0"
>
  <h2
    class="c1"
    dir="ltr"
    id="test-section-label"
  >
    This is text in a SectionLabel rendering in ltr mode.
  </h2>
</div>
`;

exports[`SectionLabel With bar With title should render correctly with explicitly showing the bar 1`] = `
.c0 {
  position: relative;
  margin-top: 1.5rem;
  margin-bottom: 1rem;
}

.c0::before {
  content: '';
  position: absolute;
  border-top: 0.0625rem solid #AEAEB5;
  left: 0;
  right: 0;
  top: 0.6875rem;
}

.c1 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #222222;
  background-color: #FFFFFF;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  display: inline-block;
  position: relative;
  margin: 0;
  padding-right: 0.5rem;
}

@media (min-width:37.5rem) {
  .c0 {
    margin-top: 2rem;
    margin-bottom: 1.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0::before {
    top: 0.75rem;
  }
}

@media (min-width:37.5rem) {
  .c0::before {
    top: 0.875rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c0::before {
    border-color: windowText;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding-right: 1rem;
  }
}

<div
  class="c0"
>
  <h2
    class="c1"
    dir="ltr"
    id="test-section-label"
  >
    This is text in a SectionLabel, and there is a bar over to the right
  </h2>
</div>
`;

exports[`SectionLabel Without bar With title should render correctly 1`] = `
.c0 {
  position: relative;
  margin-top: 1.5rem;
  margin-bottom: 1rem;
}

.c1 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #222222;
  background-color: #FFFFFF;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  display: inline-block;
  position: relative;
  margin: 0;
  padding-right: 0.5rem;
}

@media (min-width:37.5rem) {
  .c0 {
    margin-top: 2rem;
    margin-bottom: 1.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding-right: 1rem;
  }
}

<div
  class="c0"
>
  <h2
    class="c1"
    dir="ltr"
    id="test-section-label"
  >
    This is text in a SectionLabel.
  </h2>
</div>
`;

exports[`SectionLabel Without bar With title should render correctly with arabic script typography values 1`] = `
.c0 {
  position: relative;
  margin-top: 1.5rem;
  margin-bottom: 1rem;
}

.c1 {
  font-size: 1.5rem;
  line-height: 2rem;
  color: #222222;
  background-color: #FFFFFF;
  font-family: NassimPersian,Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  display: inline-block;
  position: relative;
  margin: 0;
  padding-left: 0.5rem;
}

@media (min-width:37.5rem) {
  .c0 {
    margin-top: 2rem;
    margin-bottom: 1.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.625rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding-left: 1rem;
  }
}

<div
  class="c0"
>
  <h2
    class="c1"
    dir="rtl"
    id="test-section-label"
  >
    بعض محتوى النص
  </h2>
</div>
`;

exports[`SectionLabel Without bar With title should render correctly with explicit text direction 1`] = `
.c0 {
  position: relative;
  margin-top: 1.5rem;
  margin-bottom: 1rem;
}

.c1 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #222222;
  background-color: #FFFFFF;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  display: inline-block;
  position: relative;
  margin: 0;
  padding-right: 0.5rem;
}

@media (min-width:37.5rem) {
  .c0 {
    margin-top: 2rem;
    margin-bottom: 1.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    padding-right: 1rem;
  }
}

<div
  class="c0"
>
  <h2
    class="c1"
    dir="ltr"
    id="test-section-label"
  >
    This is text in a SectionLabel rendering in ltr mode.
  </h2>
</div>
`;
